# real-time-transit-reliability

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: agency.yml  kafka.yml
docker/python/: Dockerfile
docker/spark/: Dockerfile
docs/: dashboard.md  demo_run.md  remediation_plan.md
docs/demo_artifacts/: benchmark_v2_30min_summary.txt  check_counts_output.txt  dashboard_freshness_query_output.txt  postgres_gold_query_output.txt  redpanda_topics.txt  redpanda_train_position_messages.txt
scripts/: benchmark_v2.ps1  check_counts.ps1  demo_stage1.ps1  demo_v2_infra.ps1  demo_v2_producer.ps1
spark_jobs/: reference_snapshots_stream.py  train_positions_stream.py
sql/: schema.sql
src/transit_reliability/: __init__.py  config.py  db.py  db_migrate.py  display.py  settings.py  wmata_client.py
src/transit_reliability/api/: __init__.py  main.py
src/transit_reliability/dashboard/: __init__.py  app.py
src/transit_reliability/ingestion/: __init__.py  kafka_producer.py  worker.py
src/transit_reliability/streaming/: __init__.py  envelope.py  postgres_sink.py  topics.py
src/transit_reliability/transforms/: __init__.py  refresh.py
tests/: test_api.py  test_display.py  test_streaming_envelope.py  test_streaming_postgres_sink.py  test_streaming_topics.py  test_transforms_db.py  test_transforms_unit.py
